// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<img
  class="components-image wp-components-image css-1obj85a"
  data-g2-c16t="true"
  data-g2-component="Image"
  src="/olaf.png"
/>
`;

exports[`props should render with custom aspectRatio 1`] = `
<div
  class="components-aspect-ratio wp-components-aspect-ratio css-fvkpkj"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    class="css-j4t0j6"
    data-g2-c16t="true"
    data-g2-component="Image"
    src="/olaf.png"
  />
  <div
    aria-hidden="true"
    class="css-mk1ulg"
  />
</div>
`;

exports[`props should render with custom dimensions 1`] = `
<img
  class="components-image wp-components-image css-v2uj34"
  data-g2-c16t="true"
  data-g2-component="Image"
  height="275"
  src="/olaf.png"
  width="320"
/>
`;

exports[`props should render with custom fit 1`] = `
<div
  class="components-aspect-ratio wp-components-aspect-ratio css-fvkpkj"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    class="css-58crrz"
    data-g2-c16t="true"
    data-g2-component="Image"
    src="/olaf.png"
  />
  <div
    aria-hidden="true"
    class="css-mk1ulg"
  />
</div>
`;
